--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,24 @@
-#---------------------------------------------------------------------
-# GitHub Action Workflow to Deploy Flask App to AWS ElasticBeanstalk
-#
-# Version      Date        Info
-# 1.0          2019        Initial Version
-#
-# Made by Denis Astahov ADV-IT Copyleft (c) 2019
-#---------------------------------------------------------------------
-name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
-env:
-  EB_PACKAGE_S3_BUCKET_NAME : "elasticbeanstalk-us-east-1-925653724403"
-  EB_APPLICATION_NAME       : "gittest"
-  EB_ENVIRONMENT_NAME       : "Gittest-env"
-  DEPLOY_PACKAGE_NAME       : "git-test-${{ github.sha }}.zip"
-  AWS_REGION_NAME           : "us-east-1"
-
-on: 
+name: EB deploy
+on:
   push:
-    branches: 
-      - main
-
+    branches: [ master ]
 jobs:
-    my_ci_pipeline:
-       runs-on: ubuntu-latest
-       
-       steps:
-         - name: Git clone our repository
-           uses: actions/checkout@v1
-            
-         - name: Create ZIP deployment package
-           run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
-           
-         - name: Configure my AWS Credentils
-           uses: aws-actions/configure-aws-credentials@v1
-           env:
-             aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
-             aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-             aws-region           : ${{ env.AWS_REGION_NAME }}
-         - name: Copy our Deployment package to S3 bucket
-           run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
-
-         - name: Print nice message on completion of CI Pipeline
-           run : echo "CI Pipeline part finished successfully"
-
-    my_cd_pipeline:
-       runs-on: ubuntu-latest
-       env:
-             aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
-             aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-             aws-region           : ${{ env.AWS_REGION_NAME }}
-       steps:
-            - uses: actions/checkout@v1
-            - name: Install Python 3.9
-              uses: actions/setup-python@v1
-              with:
-                python-version: 3.9
-            - name: Install EB CLI using pip
-              run: |
-                python -m pip install --upgrade pip
-                pip install awsebcli
-            - name: Deploy to Elastic Beanstalk
-              run: |
-                eb deploy
+  deploy:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install EB CLI using pip
+        run: |
+          python -m pip install --upgrade pip
+          pip install awsebcli
+      - name: Deploy to Elastic Beanstalk
+        run: |
+          eb deploy
