--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
   EB_PACKAGE_S3_BUCKET_NAME : "elasticbeanstalk-us-east-1-925653724403"
   EB_APPLICATION_NAME       : "gittest"
-  EB_ENVIRONMENT_NAME       : "Gittest-env"
+  EB_ENVIRONMENT_NAME       : "Gittest-env-1"
   DEPLOY_PACKAGE_NAME       : "gittest-${{ github.sha }}.zip"
   AWS_REGION_NAME           : "us-east-1"
 
